[package]
name = "canopen"
version = "0.1.0"
authors = ["Dimitri Polonski <dimi.polonski@gmail.com>"]
edition = "2021"
keywords = ["embedded-hal"]


[dependencies]
embedded-can = "0.4.1"
atomic_float = { git = "https://github.com/JanekGraff/atomic_float.git", branch = "operation-guards", default-features = false }
