[package]
name = "canopen"
version = "0.1.0"
authors = ["Dimitri Polonski <dimi.polonski@gmail.com>"]
edition = "2021"
keywords = ["embedded-hal"]

[workspace]
members = ["canopen-derive"]

[dependencies]
embedded-can = "0.4.1"
atomic_float = { version = "1.0.0", default-features = false }
canopen-derive = { path = "canopen-derive" }
heapless = "0.8.0"

[dev-dependencies]
trybuild = "1.0"

[features]
default = ["std"]
std = []